# wenbdao

./: Cargo.toml  README.md  RESEARCH_AST_PATCHING.md  RESEARCH_QMD_CONTRAST.md  wendao.toml
benches/: wendao_performance.rs
docs/: PATH_SCOPED_OBSERVATION.md  PROJECT_ANCHOR_V3.md  PROJECT_SENTINEL_V2.md  index.md  studio_search_unused_warning_roadmap.md
docs/01_core/: 101_triple_a_protocol.md
docs/03_features/: 201_property_drawers.md  203_agentic_navigation.md  204_code_observation.md  205_semantic_auditor.md  206_openai_semantic_ignition.md  207_gateway_openapi_contract_surface.md  208_performance_gate_v1.md
docs/05_research/: 301_research_papers.md  302_search_as_reasoning.md  303_structural_proprioception.md  304_semantic_consistency_protocols.md
docs/06_roadmap/: 401_project_sentinel.md  402_repo_intelligence_mvp.md  403_document_projection_and_retrieval_enhancement.md  404_repo_intelligence_for_sciml_and_msl.md  405_large_rust_modularization.md  406_studio_search_plane.md  407_valkey_ownership_and_layering.md  408_valkey_helper_extraction_inventory.md  409_core_runtime_plugin_surface_inventory.md  410_p1_generic_plugin_contract_staging.md  411_p1_first_code_slice_plan.md  412_core_runtime_plugin_program.md  413_m2_core_extraction_package_list.md  414_m3_runtime_extraction_package_list.md  415_m4_julia_externalization_package_list.md  416_compatibility_retirement_ledger.md
resources/: omni.link_graph.record.v1.schema.json  omni.link_graph.retrieval_plan.v1.schema.json  omni.link_graph.search_options.v1.schema.json  omni.link_graph.search_options.v2.schema.json  omni.link_graph.stats.cache.v1.schema.json  omni.link_graph.valkey_cache_snapshot.v1.schema.json  xiuxian.runtime.tool_result.v1.schema.json  xiuxian_wendao.hmas.conclusion.v1.schema.json  xiuxian_wendao.hmas.digital_thread.v1.schema.json  xiuxian_wendao.hmas.evidence.v1.schema.json  xiuxian_wendao.hmas.task.v1.schema.json  xiuxian_wendao.link_graph.quantum_context_snapshot.v1.schema.json  xiuxian_wendao.link_graph.record.v1.schema.json  xiuxian_wendao.link_graph.retrieval_plan.v1.schema.json  xiuxian_wendao.link_graph.saliency.v1.schema.json  xiuxian_wendao.link_graph.search_options.v1.schema.json  xiuxian_wendao.link_graph.search_options.v2.schema.json  xiuxian_wendao.link_graph.stats.cache.v1.schema.json  xiuxian_wendao.link_graph.suggested_link.v1.schema.json  xiuxian_wendao.link_graph.suggested_link_decision.v1.schema.json  xiuxian_wendao.link_graph.valkey_cache_snapshot.v1.schema.json
resources/config/: wendao.toml
resources/openapi/: wendao_gateway.openapi.json
src/: fusion.rs  fusion_py.rs  kg_cache.rs  lib.rs  python_module.rs  schemas.rs  storage_py.rs  sync_py.rs  valkey_common.rs
src/analyzers/: errors.rs  mod.rs  plugin.rs  records.rs  registry.rs  saliency.rs  skeptic.rs
src/contract_feedback/: knowledge_entry.rs  mod.rs
src/dep_indexer_py/: helpers.rs  mod.rs  tests.rs
src/dependency_indexer/: mod.rs
src/enhancer/: frontmatter.rs  markdown_config.rs  mod.rs  pipeline.rs  relations.rs  resource_registry.rs  resource_semantics.rs  tests.rs  types.rs
src/enhancer_py/: mod.rs  py_functions.rs  py_types.rs
src/entity/: mod.rs  query.rs  tests.rs  types.rs
src/gateway/: mod.rs
src/git/: mod.rs
src/graph/: core.rs  entity_ops.rs  errors.rs  mod.rs  relation_ops.rs  skill_registry.rs  stats.rs  valkey_persistence.rs
src/graph_py/: py_entity.rs  py_relation.rs
src/hmas/: mod.rs  protocol.rs
src/ingress/: mod.rs  spider.rs  transmuter.rs
src/knowledge_py/: mod.rs  py_entry.rs  py_functions.rs
src/link_graph/: context_snapshot.rs  index.rs  mod.rs  runtime_config.rs
src/link_graph_py/: cache.rs  mod.rs
src/link_graph_refs/: model.rs  regex.rs  stats.rs
src/link_graph_refs_py/: py_types.rs
src/pybindings/: mod.rs  python_module.rs  schema_py.rs  storage_py.rs  sync_py.rs
src/query_core/: context.rs  graph.rs  mod.rs  service.rs  telemetry.rs  tests.rs  types.rs
src/search/: mod.rs
src/search_plane/: corpus.rs  mod.rs  project_fingerprint.rs  ranking.rs  repo_publication_parquet.rs  repo_staging.rs  staged_mutation.rs
src/skill_vfs/: error.rs  internal_manifest.rs  mod.rs  uri.rs
src/storage/: core.rs  crud.rs  mod.rs  query.rs
src/sync/: diff.rs  discovery.rs  incremental.rs  mod.rs  types.rs
src/types/: entry.rs  mod.rs  query.rs  stats.rs
src/unified_symbol/: mod.rs  stats.rs  symbol.rs  tests.rs
src/unified_symbol_py/: py_index.rs  py_symbol.rs  registration.rs
src/zhenfa_router/: http.rs  mod.rs  models.rs  native.rs  rpc.rs
tests/: coactivation_multihop_diffusion.rs  coactivation_weighted_propagation.rs  dependency_indexer_symbols_unit.rs  entity_unit.rs  fusion_unit.rs  ingress_spider_unit.rs  link_graph_narrator.rs  link_graph_refresh_unit.rs  planned_search_semantic_ignition.rs  ppr_weight_precision.rs  quantum_fusion_openai_ignition.rs  quantum_fusion_saliency_budget.rs  quantum_fusion_saliency_window.rs  scenarios_test.rs  test_asset_request_api_contracts.rs  test_dependency_indexer.rs  test_embedded_skill_api_contracts.rs  test_internal_skill_authority.rs  test_internal_skill_manifest.rs  test_internal_skill_repository_contracts.rs  test_link_graph.rs  test_link_graph_agentic_expansion.rs  test_link_graph_hybrid_benchmark.rs  test_link_graph_page_index.rs  test_link_graph_ppr_weighting.rs  test_link_graph_quantum_fusion.rs  test_link_graph_saliency_get_many_batches.rs  test_link_graph_seed_and_priors.rs  test_mixed_graph_topology.rs  test_parser_contracts.rs  test_ppr_weight_precision.rs  test_scenarios.rs  test_skill_reference_semantics_contracts.rs  test_skill_vfs_contracts.rs  test_skill_vfs_resolver.rs  test_skill_vfs_uri_contracts.rs  test_studio_vfs_performance.rs  test_wendao_cli.rs  test_wendao_dynamic_discovery_contracts.rs  test_wendao_resource_registry_contracts.rs  (+3 more)
tests/integration/: coactivation_multihop_diffusion.rs  coactivation_weighted_propagation.rs  concurrent_write_safety.rs  dep_indexer_python.rs  dependency_indexer.rs  docs_family_cluster.rs  docs_family_context.rs  docs_family_search.rs  docs_navigation.rs  (+58 more)
(+2236 files in other folders)
