[package]
name = "xiuxian-wendao"
version.workspace = true
edition.workspace = true
description = "High-performance knowledge and link-graph runtime with Valkey-first storage"
authors = ["CyberXiuXian Artisan Studio"]
license = "Apache-2.0"
publish = false
default-run = "wendao"

[features]
default = []
zhenfa-router = ["dep:axum"]

[[bin]]
name = "wendao"
path = "src/bin/wendao.rs"

[dependencies]

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
toml = "0.8"
chrono = { workspace = true, features = ["clock", "serde"] }
uuid = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }

# Path resolution
dirs = "5"
walkdir = "2"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Reuse common types
xiuxian-types = { path = "../xiuxian-types" }
xiuxian-skills = { path = "../xiuxian-skills" }
xiuxian-logging = { path = "../xiuxian-logging" }
xiuxian-vector = { path = "../xiuxian-vector" }
xiuxian-io = { path = "../xiuxian-io" }
xiuxian-llm = { path = "../xiuxian-llm" }

# Macro utilities
xiuxian-macros = { path = "../xiuxian-macros" }

# Python bindings
pyo3 = { workspace = true }

# Fast hash for sync (5-10x faster than MD5)
xxhash-rust = "0.8"

# Fast regex for entity reference extraction (10-100x faster than Python)
regex = "1"
once_cell = "1"
lazy_static = "1"
comrak = { workspace = true }
include_dir = { workspace = true }
async-trait = { workspace = true }
dashmap = "7.0.0-rc2"

# Parallel processing
rayon = "1.11"

# Unicode normalization for entity deduplication
unicode-normalization = "0.1"

arrow = "54"

# Graph algorithms
petgraph = { workspace = true }

# Logging
log = { workspace = true }
rmcp = { workspace = true }
clap = { workspace = true }
redis = { version = "1.0.3", default-features = false, features = ["tokio-comp"] }
axum = { workspace = true, optional = true }
xiuxian-zhenfa = { path = "../xiuxian-zhenfa" }
url = "2.5.7"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
insta = { workspace = true }
xiuxian-testing = { path = "../xiuxian-testing" }

[lints]
workspace = true
