[package]
name = "xiuxian-wendao"
version.workspace = true
edition.workspace = true
description = "High-performance knowledge and link-graph runtime with Valkey-first storage"
authors = ["CyberXiuXian Artisan workshop"]
license = "Apache-2.0"
publish = false
default-run = "wendao"

[features]
default = ["zhenfa-router", "julia", "modelica"]
pybindings = ["pyo3"]
zhenfa-router = ["dep:axum", "dep:tower"]
julia = ["xiuxian-wendao-runtime/julia"]
modelica = ["dep:xiuxian-wendao-modelica"]
tree-sitter = ["modelica", "xiuxian-ast/modelica", "xiuxian-wendao-modelica/tree-sitter"]
performance = ["xiuxian-testing/performance"]
performance-stress = ["performance"]

[[bin]]
name = "wendao"
path = "src/bin/wendao.rs"

[[bench]]
name = "wendao_performance"
harness = false
required-features = ["performance"]


[dependencies]

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
toml = "0.8"
chrono = { workspace = true, features = ["clock", "serde"] }
uuid = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }

# Path resolution
dirs = "5"
walkdir = "2"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Reuse common types
xiuxian-types = { path = "../xiuxian-types" }
xiuxian-skills = { path = "../xiuxian-skills" }
xiuxian-logging = { path = "../xiuxian-logging" }
xiuxian-vector = { path = "../xiuxian-vector" }
xiuxian-io = { path = "../xiuxian-io" }
xiuxian-llm = { path = "../xiuxian-llm" }
xiuxian-wendao-core = { path = "../xiuxian-wendao-core" }
xiuxian-wendao-julia = { path = "../xiuxian-wendao-julia" }
xiuxian-wendao-modelica = { path = "../xiuxian-wendao-modelica", optional = true, default-features = false }
xiuxian-wendao-runtime = { path = "../xiuxian-wendao-runtime", default-features = false }
xiuxian-ast = { path = "../xiuxian-ast", features = ["julia"] }
xiuxian-config-core = { path = "../xiuxian-config-core" }
xiuxian-testing = { path = "../xiuxian-testing" }

# Macro utilities
xiuxian-macros = { path = "../xiuxian-macros" }

# Optional Python bindings
pyo3 = { workspace = true, optional = true }

# Fast hash for sync (5-10x faster than MD5)
xxhash-rust = "0.8"

# Content fingerprinting (Blake3)
blake3 = "1"

# SHA-256 for surgical fix verification (Blueprint v3.0)
sha1 = "0.10"

# Fast regex for entity reference extraction (10-100x faster than Python)
regex = "1"
globset = { workspace = true }
comrak = { workspace = true }
include_dir = { workspace = true }
async-trait = { workspace = true }
dashmap = "7.0.0-rc2"

# Parallel processing
rayon = "1.11"

# Unicode normalization for entity deduplication
unicode-normalization = "0.1"

arrow = { workspace = true }
arrow-flight = "57.3.0"
tonic = { version = "0.14.5", default-features = false, features = ["transport"] }
tonic-web = "0.14"

# Graph algorithms
petgraph = { workspace = true }

# Logging
log = { workspace = true }
clap = { workspace = true }
redis = { version = "1.0.3", default-features = false, features = ["tokio-comp"] }
axum = { workspace = true, optional = true }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout", "util"], optional = true }
xiuxian-zhenfa = { path = "../xiuxian-zhenfa" }
url = "2.5.7"

# Real-time observation (Project Sentinel Phase 2)
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# HTTP client for webhook notifications (Phase 7 ForwardNotifier)
reqwest = { workspace = true }
git2 = { workspace = true }
tantivy = "0.25"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
insta = { workspace = true }
serial_test = { version = "3", features = ["file_locks"] }
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
